# trapi-testing-tools

./: .gitignore  README.md  config.yaml  pyproject.toml
analysis/: allbound.py  hierarchy.py  path.py
queries/additional/feature/pathfinder/: pftq10-warfarin-neoplastia.py  pftq11a-eicosapentiaenoic-acid-ascvd.py  pftq11b-eicosapentiaenoic-acid-ascvd.py  pftq12-plau-opg.py  pftq1b-imatinib-asthma.py  pftq2-resveratrol-glyoxalase.py  pftq3-crohns-parkinsons.py  pftq4-slc6a20-covid19.py  pftq5-ifng-tryptophane.py  pftq6a-sildenafil-cognitiveDecline.py  pftq6b-sildenafil-alzheimers.py  pftq7-acetylsalicylate-colorectal-cancer.py  pftq8-fluoxetine-long-covid.py  pftq9-parkinsons-melanoma.py
queries/additional/feature/pathfinder/constrained/: pftq10-warfarin-neoplastia.py  pftq11-eicosapentiaenoic-acid-ascvd.py  pftq12-plau-opg.py  pftq2-resveratrol-glyoxalase.py  pftq3-crohns-parkinsons.py  pftq4-slc6a20-covid19.py  pftq5-ifng-tryptophane.py  pftq6-sildenafil-alzheimers.py  pftq7-acetylsalicylate-colorectal-cancer.py  pftq8-fluoxetine-long-covid.py  pftq9-parkinsons-melanoma.py
queries/additional/topology/: branch.py  branch_3.py  cycle.py  explain_1h.py  explain_2h.py  explain_3h.py  explain_double1h.py  long_branch.py  predict_1h.py  predict_2h.py  predict_batch_1h.py  predict_double1h.py  short_branch.py
queries/routine/: metakg.py  smartapi_metakg.py  team_metakg.py
queries/routine/async/: 404.py  bad-api.py  bad-team.py  by-api.py  by-team.py  general.py
queries/routine/feature/: dryrun.py  kl-at.py  mcq.py  source-record-urls.py
queries/routine/feature/caching/: bypass-cache-async.py  bypass-cache.py  cache.py  creative-cache.py  disable-cache.py
queries/routine/feature/creative/: chem-decreases-gene.py  chem-increases-gene.py  drug_treats_disease.py
queries/routine/feature/loglevel/: async.py  sync.py
queries/routine/feature/pathfinder/: pftq1a-imatinib-allergicasthma.py
queries/routine/feature/pathfinder/constrained/: pftq1-imatinib-asthma.py
queries/routine/sync/: bad-api.py  bad-graph.py  bad-team.py  by-api.py  by-team.py  general.py
tests/: base_test.py  http.py  kg.py  logs.py  metakg.py  results.py
trapi_testing_tools/: __main__.py  config.py  harness.py  main.py  retrieve_by_pk.py  run_query.py  types.py  utils.py
trapi_testing_tools/commands/: analyze.py  curl.py  harness.py  ping.py  pk.py  test.py  utils.py  validate.py
trapi_testing_tools/queries/additional/feature/pathfinder/: pftq10-warfarin-neoplastia.py  pftq11a-eicosapentiaenoic-acid-ascvd.py  pftq11b-eicosapentiaenoic-acid-ascvd.py  pftq12-plau-opg.py  pftq2-resveratrol-glyoxalase.py  pftq3-crohns-parkinsons.py  pftq4-slc6a20-covid19.py  pftq5-ifng-tryptophane.py  pftq6a-sildenafil-cognitiveDecline.py  pftq6b-sildenafil-alzheimers.py  pftq7-acetylsalicylate-colorectal-cancer.py  pftq8-fluoxetine-long-covid.py  pftq9-parkinsons-melanoma.py
trapi_testing_tools/queries/additional/feature/pathfinder/constrained/: pftq10-warfarin-neoplastia.py  pftq11-eicosapentiaenoic-acid-ascvd.py  pftq12-plau-opg.py  pftq2-resveratrol-glyoxalase.py  pftq3-crohns-parkinsons.py  pftq4-slc6a20-covid19.py  pftq5-ifng-tryptophane.py  pftq6-sildenafil-alzheimers.py  pftq7-acetylsalicylate-colorectal-cancer.py  pftq8-fluoxetine-long-covid.py  pftq9-parkinsons-melanoma.py
trapi_testing_tools/queries/routine/: metakg.py  smartapi_metakg.py  team_metakg.py
trapi_testing_tools/queries/routine/async/: 404.py  bad-api.py  bad-team.py  by-api.py  by-team.py  general.py
trapi_testing_tools/queries/routine/feature/: dryrun.py  kl-at.py  mcq.py  source-record-urls.py
trapi_testing_tools/queries/routine/feature/caching/: bypass-cache-async.py  bypass-cache.py  cache.py  creative-cache.py  disable-cache.py
trapi_testing_tools/queries/routine/feature/creative/: chem-decreases-gene.py  chem-increases-gene.py  drug_treats_disease.py
trapi_testing_tools/queries/routine/feature/loglevel/: async.py  sync.py
trapi_testing_tools/queries/routine/feature/pathfinder/: pftq1a-imatinib-allergicasthma.py
trapi_testing_tools/queries/routine/feature/pathfinder/constrained/: pftq1-imatinib-asthma.py
trapi_testing_tools/queries/routine/sync/: bad-api.py  bad-team.py  by-api.py  by-team.py  general.py
