[project]
name = "trapi-testing-tools"
version = "0.1.0"
description = "A collection of tools for testing and analyzing all things TRAPI."
authors = [{ name = "tokebe", email = "43009413+tokebe@users.noreply.github.com" }]
requires-python = "~=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "typer[all]>=0.12.5,<0.13",
    "httpx>=0.27.2,<0.28",
    "pydantic>=2.9.2,<3",
    "tqdm>=4.66.5,<5",
    "translator-testing-model>=0.3.2,<0.4",
    "survey>=5.4.2,<6",
    "inquirerpy>=0.3.4,<0.4",
    "urlextract>=1.9.0,<2",
    "platformdirs>=4.3.6,<5",
    "pydantic-settings>=2.6.1,<3",
    "natsort>=8.4.0,<9",
]

[project.scripts]
trapi-tools = "trapi_testing_tools.main:main"
tt = "trapi_testing_tools.main:main"
ttt = "trapi_testing_tools.main:test_shortcut"

[tool.hatch.build.targets.sdist]
include = ["trapi_testing_tools"]

[tool.hatch.build.targets.wheel]
include = ["trapi_testing_tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
